--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html,
 body {
   height: 100%;
+  font-size: 1em;
+  background: ;
 }
 
 body {
@@ -25,9 +27,21 @@ header {
     font-size: xx-large;
     color: white;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
+
+.shuttle{
+  width : 12%;
+  height: 55%;
+  background: url('/img/space-shuttle.png');
+  background-size: cover;
+}
+
+.left{
+  transform: rotate(180deg);
+}
+
 
 footer {
     height: 5%;
